[gd_scene load_steps=6 format=3 uid="uid://bvnf2raqi3v41"]

[ext_resource type="PackedScene" uid="uid://cb2e2cndtui6m" path="res://scenes/characters/character_scene.tscn" id="1_qp2wj"]
[ext_resource type="Script" uid="uid://b8sa4413uav8x" path="res://scenes/battle/battle_scene.gd" id="1_ugm31"]
[ext_resource type="Resource" uid="uid://x3ps14kdto0r" path="res://resources/characters_data/player_hero_data.tres" id="2_rl52j"]
[ext_resource type="Resource" uid="uid://hcxd57tvokjr" path="res://resources/characters_data/enemy_goblin_data.tres" id="3_13vd6"]
[ext_resource type="Script" uid="uid://boqbvmqrbyse" path="res://scripts/core/battle_manager.gd" id="5_o3k7m"]

[node name="BattleScene" type="Node2D"]
script = ExtResource("1_ugm31")

[node name="BattleUI" type="CanvasLayer" parent="."]
layer = 128

[node name="ActionPanel" type="Panel" parent="BattleUI"]
anchors_preset = -1
anchor_left = 0.726
anchor_top = 0.764
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -6.35199
offset_top = -4.07205
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="BattleUI/ActionPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AttackButton" type="Button" parent="BattleUI/ActionPanel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
text = "Attack"

[node name="DefendButton" type="Button" parent="BattleUI/ActionPanel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
text = "Defend"

[node name="Background" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.12549, 0.12549, 0.12549, 1)

[node name="BattleAreaRect" type="ColorRect" parent="."]
offset_left = 50.0
offset_top = 50.0
offset_right = 1102.0
offset_bottom = 450.0
color = Color(0.14902, 0.137255, 0.188235, 1)

[node name="PlayerArea" type="Node2D" parent="."]
position = Vector2(250, 300)

[node name="PlayerCharacter" parent="PlayerArea" instance=ExtResource("1_qp2wj")]
character_data = ExtResource("2_rl52j")

[node name="EnemyArea" type="Node2D" parent="."]
position = Vector2(850, 300)

[node name="EnemyCharacter" parent="EnemyArea" instance=ExtResource("1_qp2wj")]
character_data = ExtResource("3_13vd6")

[node name="BattleManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("5_o3k7m")
metadata/_custom_type_script = "uid://boqbvmqrbyse"
